--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.3.4"
+    "@nomiclabs/buidler": "^1.3.4",
+    "dotenv": "^8.2.0"
   }
 }
