--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/buidler": "^1.3.4",
-    "dotenv": "^8.2.0"
+    "@nomiclabs/buidler-ethers": "^1.3.3",
+    "@nomiclabs/buidler-waffle": "^1.3.3",
+    "chai": "^4.2.0",
+    "dotenv": "^8.2.0",
+    "ethereum-waffle": "^2.5.1",
+    "ethers": "^4.0.47"
   }
 }
