--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^2.5.1",
     "ethers": "^4.0.47",
+    "husky": "^4.2.5",
     "solhint": "^3.0.0"
   }
 }
