Add pre-commit hook that lints Solidity contracts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "solhint -w 0 \"contracts/**/*.sol\""
+    }
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
