--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethereum-waffle": "^2.5.1",
     "ethers": "^4.0.47",
     "husky": "^4.2.5",
-    "solhint": "^3.0.0"
+    "solhint": "^3.0.0",
+    "solidity-coverage": "^0.7.5"
   }
 }
