--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nomiclabs/buidler": "^1.3.4",
     "@nomiclabs/buidler-ethers": "^1.3.3",
     "@nomiclabs/buidler-waffle": "^1.3.3",
+    "@openzeppelin/contracts": "^3.0.1",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^2.5.1",
