--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@nomiclabs/buidler": "^1.3.4",
     "@nomiclabs/buidler-ethers": "^1.3.3",
     "@nomiclabs/buidler-waffle": "^1.3.3",
-    "@openzeppelin/contracts": "^3.0.1",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^2.5.1",
@@ -36,6 +35,9 @@
     "solidity-coverage": "^0.7.5"
   },
   "dependencies": {
-    "@uniswap/lib": "^1.1.2"
+    "@openzeppelin/contracts": "^3.0.1",
+    "@uniswap/lib": "^1.1.2",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.0.0-beta.0"
   }
 }
